flexbox-project/style.css
body {
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    text-decoration: none;
}

.top {
    display: flex;
    justify-content: space-between;
    background-color: #1F2937; 
    padding: 10px 100px 10px;
    margin: 0px;
}

.logo {
    font-size: 24px;
    font-weight: bold; 
    color: #F9FAF8;
    display: flex;
}

.header-links, a {
    display: flex;
    align-content: center;
    gap: 18px;
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.subhead {
    display: flex;
    justify-content: space-between;
    gap: 36px;
    padding: 100px 100px 100px;
    margin: 0px;
    background-color: #1F2937; 
    color: #E5E7EB;
}

.title, h1, p {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 8px;
    flex: 1 1 0;
    margin: 0;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    line-height: 1;
}

p, button {
    font-size: 18px;
}

button[type="button-1"] {
    background-color: #3882F6;
    color: #E5E7EB;
    align-self: flex-start;
    border: none;
    border-radius: 8px;
    padding: 6px 24px;
    font-weight: bold;
}

.image-box {
    background-color: gray;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
}

